# syard

./: CMakeLists.txt  README.md
syard/: syard.cc  syard.hh
test/: syard.cc
